2024-04-25: [BREAKING CHANGE] Update to using lazy calls in popups. Needs latest qtile.
2024-04-08: [RELEASE] v0.25.0 release - compatible with qtile 0.25.0
2024-03-10: [FEATURE] Expose widget popup menu commands and allow custom positioning
2024-03-02: [BUGFIX] Fix bug for volume widgets where bar crashes if volume is greater than 100%
2024-03-02: [BUGFIX] Fix popup menus ignoring config
2024-02-17: [FEATURE] Add `AnimatedImage` widget
2024-02-16: [FEATURE] Allow pango markup in `PopupText` controls
2024-02-09: [BUGFIX] Handle connection errors in `GithubNotifications` widget
2024-01-20: [RELEASE] v0.24.0 - compatible with qtile 0.24.0
2024-01-20: [PYPI] Enable release workflow to push future releases to PyPI
2024-01-20: [BUGFIX] Fix `Visualiser` bug with `hide=True`
2024-01-20: [FEATURE] Add `GroupBox2` widget
2023-12-21: [FEATURE] Add `IWD` widget
2023-11-17: [BUGFIX] Prevent double hooks for Mpris2 widget
2023-11-13: [BUGFIX] A neater fix for the `Visualiser` CPU bug
2023-11-13: [BUGFIX] Fix `fraction` KeyError in `UpowerWidget`
2023-11-13: [FEATURE] Add `invert` option to `Visualiser` to draw bars from top down
2023-11-12: [BUGFIX] (Trying to) fix increasing CPU with `Visualiser` widget
2023-11-11: [DOCS] Update installation instructions
2023-11-10: [FEATURE] Add custom hooks to certain widgets (refer to docs for more)
2023-10-16: [FEATURE] Updated `Bluetooth` widget to add context menu
2023-10-08: [BUGFIX] Fix `BrightnessControl` text display issue in `Bar` mode
2023-10-07: [BUGFIX] Tooltip position on multiple screens
2023-10-07: [BUGFIX] Fix issue with decorations stacked on top of `PowerLineDecoration` taking wrong width.
2023-10-01: [BREAKING CHANGE] Update `PulseVolume` and `PulseVolumeExtra` to reflect updates pushed to qtile.
                              Needs latest qtile git version. 
2023-09-29: [RELEASE] v0.23.0 released - compatible with qtile 0.23.0
2023-09-18: [FEATURE] Add experimental support for `GlobalMenu` in Wayland.